refactored contents